Tjm 93 create notification service (#80)
* feat: create notification service funciton

* feat: add notification service

* chore: prettier

* feat: add pagination for notification controller and add swagger

* fix: data type
